# wbm-notifier

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.ini  justfile  pyproject.toml
.github/workflows/: docker-publish.yml
src/config/: config.ini  manager.py
src/wbm_notifier/: __init__.py  fetcher.py  main.py  notifier.py  storage.py
tests/: test_config_order.py
